spi: tegra: T194 slave continuous mode driver
Add SPI slave continuous pause mode driver.

Bug 200611188

Change-Id: Ie00ed761545c146c84748d54ee18ee17bd2b4906
Signed-off-by: Krishna Yarlagadda <kyarlagadda@nvidia.com>
Signed-off-by: Vishwaroop A <va@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2521191
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -857,6 +857,11 @@ config SPI_TEGRA124_SLAVE
 	help
 	  SPI slave driver for Nvidia Tegra124 and later soc SPI Controller interface.
 
+config SPI_TEGRA194_SLAVE
+	tristate "Nvidia Tegra194 SPI controller slave continuous pause mode driver"
+	help
+	  SPI slave continuous pause mode driver for Nvidia Tegra SOC.
+
 config SPI_TEGRA20_SFLASH
 	tristate "Nvidia Tegra20 Serial flash Controller"
 	depends on ARCH_TEGRA || COMPILE_TEST
