--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -1,4 +1,4 @@
-# Copyright (c) 2012-2018, NVIDIA CORPORATION.  All rights reserved.
+# Copyright (c) 2012-2021, NVIDIA CORPORATION.  All rights reserved.
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms and conditions of the GNU General Public License,
@@ -25,6 +25,13 @@ config THERMAL_GOV_PID
 	help
 	  This governor manages thermals based on output values of
 	  PID controller.
+
+config THERMAL_GOV_CONTINUOUS
+	bool "CONTINUOUS thermal governor"
+	help
+	  This governor will filter raw temperature with IIR filter ,fetch
+	  active pwm table from cdev pwm table and then caculate target pwm
+	  value. This will make fan run more quietly and smoothly.
 
 config TEGRA_THERMAL_THROTTLE
        bool "Enable throttling of CPU speed on overtemp"
