t19x: eqos: pad calibration
Add eqos RGMII Rx pad pins
(PADCTL_EQOS_RDx of E_INPUT) enable/disable

Bug 2831220

Change-Id: I85670d62386cb255fdca3bf857d2f3164bef43ca
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2322969
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Mahesh Patil <maheshp@nvidia.com>
Reviewed-by: Srinivas Ramachandran <srinivasra@nvidia.com>
Reviewed-by: Ashutosh Jha <ajha@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Mahesh Patil <maheshp@nvidia.com>
Tested-by: Nagaraj Annaiah <nannaiah@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra194-soc/tegra194-soc-eqos.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-eqos.dtsi
@@ -37,6 +37,27 @@
 
 
 / {
+	pinmux@2430000 {
+		eqos_mii_rx_input_state_disable: eqos_rx_disable {
+			eqos {
+				nvidia,pins = "eqos_rd0_pe6","eqos_rd1_pe7",
+						"eqos_rd2_pf0","eqos_rd3_pf1",
+						"eqos_rx_ctl_pf2";
+
+				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
+			};
+		};
+		eqos_mii_rx_input_state_enable: eqos_rx_enable {
+			eqos {
+				nvidia,pins = "eqos_rd0_pe6","eqos_rd1_pe7",
+						"eqos_rd2_pf0","eqos_rd3_pf1",
+						"eqos_rx_ctl_pf2";
+
+				nvidia,enable-input = <TEGRA_PIN_ENABLE>;
+			};
+		};
+	};
+
 	aliases {
 		ethernet = "/ethernet@2490000";
 	};
@@ -79,6 +100,7 @@
 		nvidia,mtl-queues = <0 1 2 3>;
 		nvidia,rx-queue-prio = <0x2 0x1 0x30 0x48>;
 		nvidia,dcs-enable = <0x1>;
+		nvidia,pad_calibration = <0x1>;
 		nvidia,tx-queue-prio = <0x0 0x7 0x2 0x3>;
 		iommus = <&smmu TEGRA_SID_EQOS>;
 		iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
@@ -91,6 +113,9 @@
 		/* PTP_ref clock speed in Hz (312.5 MHz)*/
 		nvidia,ptp_ref_clock_speed = <312500000>;
 		status = "disabled";
+		pinctrl-names = "mii_rx_disable", "mii_rx_enable";
+		pinctrl-0 = <&eqos_mii_rx_input_state_disable>;
+		pinctrl-1 = <&eqos_mii_rx_input_state_enable>;
 		eqos_cool_dev: eqos-cool-dev {
 			cooling-min-state = <0>;
 			cooling-max-state = <5>;
