qspi: add tegra qspi driver with native dma support
Add TEGRA QSPI driver for NVIDIA's Tegra23x QSPI
controller. This controller has a in house dma
engine i.e. Native DMA engine to speed up the
transfers.

This driver supports the following features:
1. Supports CPU based transfers and DMA based transfers.
2. Combined Sequence Mode.
3. Non combined Sequence Mode.
4. Clock gating through runtime PM callbacks
5. Driver registration through DT only.

Bug 200602518

Change-Id: If21f73e7d1b0cf61bd2169c11c31bcc8fd3970a5
Reviewed-on: https://git-master.nvidia.com/r/c/linux-4.14/+/2329923
Signed-off-by: Vishwaroop A <va@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2509046
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -873,6 +873,15 @@ config SPI_TEGRA20_SLINK
 	help
 	  SPI driver for Nvidia Tegra20/Tegra30 SLINK Controller interface.
 
+config QSPI_TEGRA23x
+	tristate "Nvidia Tegra23x QSPI Controller"
+	depends on ARCH_TEGRA
+	select QSPI_TEGRA
+	help
+	  QSPI driver for Nvidia Tegra23x QSPI Controller interface. This
+	  controller is different from the spi controller and first time
+	  introduces Native DMA support on Tegra23x soc.
+
 config QSPI_TEGRA210
 	tristate "Nvidia Tegra210 QSPI Controller"
 	depends on ARCH_TEGRA
