tegra: hwpm: add SOC HWPM driver
Add a driver for programming the Tegra SOC HWPM path. SOC HWPM allows
performance monitoring of various Tegra IPs.

The profiling tests cases are configured through IOCTLs sent by a
userspace profiling app. The IOCTLs provide the following features:
  - IP discovery and reservation
  - Buffer management
  - Whitelist query
  - Register read/write ops

Bug 200702306
Bug 3305495

Change-Id: I65003b126e01bd03d856767c55aa2424bcfd11fb
Signed-off-by: Adeel Raza <araza@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-t23x/+/2515148
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/platform/tegra/Kconfig
+++ b/drivers/platform/tegra/Kconfig
@@ -13,3 +13,11 @@ config TEGRA_SPE_HSP_MBOX_CLIENT
 	bool "Enable Mailbox Client Implementation of HSP Protocol for Camera"
 	depends on TEGRA_SPE && ARCH_TEGRA_23x_SOC && MAILBOX
 	default n
+
+config TEGRA_SOC_HWPM
+	bool "Tegra SOC HWPM driver"
+	depends on ARCH_TEGRA_23x_SOC
+	default n
+	help
+	  The SOC HWPM driver enables performance monitoring for various Tegra
+	  IPs.
