--- a/drivers/platform/tegra/Makefile
+++ b/drivers/platform/tegra/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2020, NVIDIA CORPORATION. All rights reserved.
+# Copyright (c) 2020-2021, NVIDIA CORPORATION. All rights reserved.
 
 obj-$(CONFIG_TEGRA_DCE) += dce/
 obj-$(CONFIG_TEGRA_SPE) += aon/
@@ -9,3 +9,5 @@ obj-$(CONFIG_TEGRA_PSC) += psc/
 obj-$(CONFIG_TEGRA_CACHE) += cache/
 
 obj-$(CONFIG_HW_PERF_EVENTS) += uncore_pmu/
+
+obj-$(CONFIG_TEGRA_SOC_HWPM) += hwpm/
