--- a/kernel-dts/t19x-common-modules/tegra194-cvm-e3360-0000-a00.dtsi
+++ b/kernel-dts/t19x-common-modules/tegra194-cvm-e3360-0000-a00.dtsi
@@ -53,12 +53,6 @@
 	plugin-manager {
 		fragment-e3360-a00-mods {
 			odm-data = "mods-build";
-			override@0 {
-				target = <&gpcdma>;
-				_overlay_ {
-					nvidia,bypass-smmu;
-				};
-			};
 			override@1 {
 				target = <&dp_aux_ch0_i2c>;
 				_overlay_ {
@@ -133,6 +127,12 @@
 			};
 			ovveride@13 {
 				target = <&mods_isp>;
+				_overlay_ {
+					status = "okay";
+				};
+			};
+			ovveride@14 {
+				target = <&mods_dma>;
 				_overlay_ {
 					status = "okay";
 				};
