enable SMMU and using GPCDMA for QSPI
- add QSPI SMMU buffer support
  add mods dtb device node

Change-Id: I02130a4eb500fabe964e56f44b1d86cfb2fae804
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2495757
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Carl Dong <carld@nvidia.com>
Reviewed-by: Petlozu Pravareshwar <petlozup@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Luke He <lhe@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra194-soc/tegra194-soc-memory.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-memory.dtsi
@@ -775,4 +775,12 @@
 		dev-names = "mods_isp";
 		status = "disabled";
 	};
+
+	mods_dma: mods_dma {
+		compatible = "nvidia,mods_smmu";
+		iommus = <&smmu TEGRA_SID_GPCDMA_0>;
+		dma-coherent;
+		dev-names = "mods_dma";
+		status = "disabled";
+	};
 };
