soc: fpga: add dt for for t234 pinmux driver
JIRA OKERNELIO-15

Change-Id: Ic6b2e3669d200a410bcba06343ec1e11e818f48b
Signed-off-by: Prathamesh Shete <pshete@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2498736
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -74,6 +74,14 @@
 		status = "disabled";
 	};
 
+	tegra_pinctrl: pinmux: pinmux@2430000 {
+		compatible = "nvidia,tegra234-pinmux";
+		reg = <0x0 0x2430000 0x0 0x19100
+			0x0 0xc300000 0x0 0x4000>;
+		#gpio-range-cells = <3>;
+		status = "disabled";
+	};
+
 	hsp_top: tegra-hsp@3c00000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x03c00000 0x0 0x000a0000>;
