hsp: Add TOP2 HSP node
- add TOP2 HSP dt node

Change-Id: Icb82a0541ae90ffe1402e1686cefe61e84db94ea
Jira: SS-2208
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2499249
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -181,6 +181,21 @@
 		status = "disabled";
 	};
 
+	hsp_top2: tegra-hsp@1600000 {
+		compatible = "nvidia,tegra186-hsp";
+		reg = <0x0 0x01600000 0x0 0x00090000>;
+		interrupts = <0 265 0x4>, <0 266 0x4>, <0 267 0x4>,
+        <0 268 0x4>, <0 269 0x4>, <0 270 0x4>, <0 271 0x4>, <0 272 0x4>;
+		interrupt-names = "shared0", "shared1", "shared2", "shared3",
+				"shared4", "shared5", "shared6", "shared7";
+		#mbox-cells = <2>;
+		nvidia,mbox-ie;
+		status = "disabled";
+	};
+
+
+
+
 	sce_hsp: tegra-hsp@b150000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x0b150000 0x0 0x00090000>;
