nvethernetrm: add interface operations for virtualization/non-virtualization
Issue:  In current implementation virualization
	callback are at HW ops level, which leads
        to multiple IVC calls.
Fix:	- IVC call happens only for core API's in case
	virtualization
	- For non-virtualization case HW operations will
	be invoked directly from OS OSD.
	- From Ethernet server OSD - OSI HAL API's
	should be called to access the HW operations

Bug 200671160

Change-Id: Ic3730fb822ae37fdf29fabf429f18f5d5bacd210
Signed-off-by: Rakesh Goyal <rgoyal@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/kernel/nvethernetrm/+/2509243
Reviewed-by: Bhadram Varka <vbhadram@nvidia.com>

--- a/osi/core/Makefile.sdk
+++ b/osi/core/Makefile.sdk
@@ -26,6 +26,7 @@ OBJS += frp.o
 OBJS += mgbe_core.o
 OBJS += xpcs.o
 OBJS += mgbe_mmc.o
+OBJS += osi_hal.o
 OBJS += ivc_core.o
 OBJS += ./../common/osi_common.o
 OBJS += ./../common/eqos_common.o
