dts: t23x: Add coresight device nodes
Add device nodes for coresight STM, ETM, funnel,  and tmc.

Jira MSST-123
Jira MSST-122

Change-Id: Ibb5593c98b187f0bd76182c84a7ab5e2fb50aa3d
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2501870
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Besar Wicaksono <bwicaksono@nvidia.com>
Reviewed-by: Richard Wiley <rwiley@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Besar Wicaksono <bwicaksono@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -65,6 +65,8 @@
 #include "tegra234-soc/tegra234-automotive-nvguard.dtsi"
 #include "tegra234-soc/tegra234-automotive-nvguard-srvprop.dtsi"
 
+#include "tegra234-soc-coresight.dtsi"
+
 / {
 	aliases {
 		host1x = &host1x;
