video: tegra: nvmap: Add upstream __dma_map_area
Making NvMap as OOT module results in __dma_flush_area,
__clean_dcache_area_poc and __dma_map_area as undefined symbol during
compilation. Instead, add upstream implementation of these functions
in case of kstable.

Bug 2879962

Change-Id: I37381698f81f9ffd228fc33d13a7ce926dd99fd1
Signed-off-by: Ketan Patil <ketanp@nvidia.com>
Signed-off-by: Puneet Saxena <puneets@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2383090
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/nvmap/Makefile
+++ b/drivers/video/tegra/nvmap/Makefile
@@ -37,6 +37,7 @@ endif
 KASAN_SANITIZE_nvmap_kasan_wrapper.o := n
 
 ifneq ($(findstring stable,$(NV_BUILD_KERNEL_OPTIONS)),)
+nvmap-y += nvmap_cache_maint.o
 ccflags-y += -DNVMAP_LOADABLE_MODULE
 obj-m +=nvmap.o
 else
