dts: soc: t23x: fix camera device nodes
Fix errors in camera device nodes:
* Add missing vi0-thi and vi1-thi device nodes, remove vi-thi
* Add vi1-thi to cvdevs for GoS support
* Use TEGRA234_RESET_VI2 reset in vi1 device node
* Remove nvcsi clocks from vi0 and vi1 device nodes
* Add mipical clocks and resets to nvcsi device node
* Disable SMMU for VI and VI2 in virtual configuration
* Define TEGRA_SID_ISP_VM2

Jira CO-2680
Change-Id: I18a229c663b47a8361f141af6ac79628433901a5
Signed-off-by: Mika Liljeberg <mliljeberg@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2503089
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-memory.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-memory.dtsi
@@ -36,7 +36,7 @@
 			alignment = <0 0x1000>;
 			no-map;
 			status = "disabled";
-			cvdevs = <&nvdla0 &nvdla1 &pva0 &vi_thi &isp_thi>;
+			cvdevs = <&nvdla0 &nvdla1 &pva0 &vi0_thi &vi1_thi &isp_thi>;
 		};
 
 		ramoops_reserved: ramoops_carveout {
