--- a/kernel-dts/tegra234-soc/tegra234-soc-host1x.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-host1x.dtsi
@@ -362,12 +362,10 @@
 			resets = <&bpmp_resets TEGRA234_RESET_VI>;
 			reset-names = "vi";
 			clocks = <&bpmp_clks TEGRA234_CLK_VI>,
-				 <&bpmp_clks TEGRA234_CLK_VI_CONST>,
-				 <&bpmp_clks TEGRA234_CLK_NVCSI>,
-				 <&bpmp_clks TEGRA234_CLK_NVCSILP>;
-			clock-names = "vi", "vi-const", "nvcsi", "nvcsilp";
+				 <&bpmp_clks TEGRA234_CLK_VI_CONST>;
+			clock-names = "vi", "vi-const";
 			power-domains = <&bpmp TEGRA234_POWER_DOMAIN_VE>;
-			nvidia,vi-falcon-device = <&vi_thi>;
+			nvidia,vi-falcon-device = <&vi0_thi>;
 
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 			iommus = <&smmu_iso TEGRA_SID_ISO_VI>;
@@ -379,17 +377,20 @@
 			status = "disabled";
 		};
 
+		vi0_thi: vi0-thi@15f00000 {
+			compatible = "nvidia,tegra234-vi-thi";
+			status = "disabled";
+		};
+
 		vi1: vi1@14c00000 {
 			compatible = "nvidia,tegra234-vi";
-			resets = <&bpmp_resets TEGRA234_RESET_VI>;
+			resets = <&bpmp_resets TEGRA234_RESET_VI2>;
 			reset-names = "vi";
 			clocks = <&bpmp_clks TEGRA234_CLK_VI>,
-				 <&bpmp_clks TEGRA234_CLK_VI_CONST>,
-				 <&bpmp_clks TEGRA234_CLK_NVCSI>,
-				 <&bpmp_clks TEGRA234_CLK_NVCSILP>;
-			clock-names = "vi", "vi-const", "nvcsi", "nvcsilp";
+				 <&bpmp_clks TEGRA234_CLK_VI_CONST>;
+			clock-names = "vi", "vi-const";
 			power-domains = <&bpmp TEGRA234_POWER_DOMAIN_VE>;
-			nvidia,vi-falcon-device = <&vi_thi>;
+			nvidia,vi-falcon-device = <&vi1_thi>;
 
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 			iommus = <&smmu_iso TEGRA_SID_ISO_VI2>;
@@ -401,14 +402,8 @@
 			status = "disabled";
 		};
 
-		vi_thi: vi-thi@15f00000 {
-			compatible = "nvidia,tegra194-vi-thi";
-
-			/* vi-thi host1x is used for pixel injection tests */
-			clocks = <&bpmp_clks TEGRA234_CLK_VI>,
-			         <&bpmp_clks TEGRA234_CLK_VI_CONST>;
-			clock-names = "vi", "vi-const";
-			power-domains = <&bpmp TEGRA234_POWER_DOMAIN_VE>;
+		vi1_thi: vi1-thi@14f00000 {
+			compatible = "nvidia,tegra234-vi-thi";
 			status = "disabled";
 		};
 
@@ -434,7 +429,6 @@
 
 		isp_thi: isp-thi@14b00000 {
 			compatible = "nvidia,tegra194-isp-thi";
-                        reg = <0x0 0x14b00000 0x0 0x00100000>;
 			status = "disabled";
 		};
 
@@ -442,10 +436,12 @@
 			compatible = "nvidia,tegra194-nvcsi";
 			reg = <0x0 0x15a00000 0x0 0x00050000>;
 			power-domains = <&bpmp TEGRA234_POWER_DOMAIN_VE>;
-			resets = <&bpmp_resets TEGRA234_RESET_NVCSI>;
+			resets = <&bpmp_resets TEGRA234_RESET_NVCSI>,
+				 <&bpmp_resets TEGRA234_RESET_MIPI_CAL>;
 			clocks = <&bpmp_clks TEGRA234_CLK_NVCSI>,
-				 <&bpmp_clks TEGRA234_CLK_NVCSILP>;
-			clock-names = "nvcsi", "nvcsilp";
+				 <&bpmp_clks TEGRA234_CLK_NVCSILP>,
+				 <&bpmp_clks TEGRA234_CLK_MIPI_CAL>,
+				 <&bpmp_clks TEGRA234_CLK_UART_FST_MIPI_CAL>;
 			interrupts = <0 119 0x04>;
 			num-ports = <6>;
 			status = "disabled";
