--- a/kernel-dts/tegra234-soc/tegra234-soc-virt.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-virt.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2020, NVIDIA CORPORATION.  All rights reserved.
+ * Copyright (c) 2017-2021, NVIDIA CORPORATION.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms and conditions of the GNU General Public License,
@@ -60,21 +60,26 @@
 
 	/* ISO-clients cannot have stage-1 translation and hence
 	 * iommus node are deleted for ISO-Clients which are
-	 * nvdisplay, vi and vi-thi */
+	 * nvdisplay, vi0, vi1, vi0-thi, and vi1-thi */
 	host1x@13e00000 {
-		vi0: vi0@15c00000 {
-						/delete-property/ iommus;
-						/delete-property/ iso-smmu;
+		vi0@15c00000 {
+			/delete-property/ iommus;
+			/delete-property/ iso-smmu;
 		};
 
-		vi1: vi1@14c00000 {
-						/delete-property/ iommus;
-						/delete-property/ iso-smmu;
+		vi1@14c00000 {
+			/delete-property/ iommus;
+			/delete-property/ iso-smmu;
 		};
 
-		vi_thi: vi-thi@15f00000 {
-						/delete-property/ iommus;
-						/delete-property/ iso-smmu;
+		vi0-thi@15f00000 {
+			/delete-property/ iommus;
+			/delete-property/ iso-smmu;
+		};
+
+		vi1-thi@14f00000 {
+			/delete-property/ iommus;
+			/delete-property/ iso-smmu;
 		};
 	};
 
