arm64: dts: compile t239 dts based on CONFIG
Add t239 specific config option and enable the dts
compilation for t239 based on the config value.

Bug 200705644

Change-Id: I9a36a03faba1f046ab3b839fb37e520b37b4cf89
Signed-off-by: ajeshkv <akv@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2503312
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -30,6 +30,11 @@ DTC_INCLUDE += $(tegra-dtstree)/soc/t23x/kernel-dts
 DTC_INCLUDE += $(tegra-dtstree)/platform/t23x/common/kernel-dts
 endif
 
+ifeq ($(CONFIG_ARCH_TEGRA_239_SOC),y)
+DTC_INCLUDE += $(tegra-dtstree)/soc/t239/kernel-include
+DTC_INCLUDE += $(tegra-dtstree)/soc/t239/kernel-dts
+endif
+
 DTB_LIST := $(dtb-y)
 DTBO_LIST := $(dtbo-y)
 dtb-y :=
