--- a/kernel-dts/tegra194-soc/tegra194-soc-pcie.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-pcie.dtsi
@@ -55,7 +55,7 @@
 		};
 	};
 
-#if LINUX_VERSION >= 500
+#if TEGRA_PCIE_VERSION >= DT_VERSION_2
 	cbb {
 		compatible = "simple-bus";
 		#address-cells = <1>;
@@ -482,20 +482,13 @@
 	pcie_ep@14180000 {
 		compatible = "nvidia,tegra194-pcie-ep";
 		power-domains = <&bpmp TEGRA194_POWER_DOMAIN_PCIEX8B>;
-#if LINUX_VERSION >= 500
+
 		reg = <0x00 0x14180000 0x0 0x00020000   /* appl registers (128K)      */
+		       0x00 0x38000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x38040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
 		       0x00 0x38080000 0x0 0x00040000   /* DBI reg space (256K)       */
 		       0x18 0x00000000 0x4 0x00000000>; /* Address Space (16G)        */
-		reg-names = "appl", "atu_dma", "dbi", "addr_space";
-#else
-		reg = <0x00 0x14180000 0x0 0x00020000   /* appl registers (128K)      */
-		       0x00 0x38000000 0x0 0x02000000   /* window1 (32M)              */
-		       0x00 0x38000000 0x0 0x00040000   /* configuration space (256K) */
-		       0x00 0x38040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x18 0x00000000 0x4 0x00000000>; /* window2 (16G)              */
-		reg-names = "appl", "window1", "config", "atu_dma", "window2";
-#endif
+		reg-names = "appl", "config", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
 		#size-cells = <2>;
@@ -503,18 +496,12 @@
 		status = "disabled";
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_0>;
-#if LINUX_VERSION >= 500
 		clock-names = "core";
-#else
-		clock-names = "core_clk";
-#endif
+
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_0_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_0>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
+
 		interrupts = <0 72 0x04>;	/* controller interrupt */
 		interrupt-names = "intr";
 
@@ -545,40 +532,31 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE0>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE0 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE0R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE0W>;
 		interconnect-names = "dma-mem", "dma-mem";
 #endif
-#if LINUX_VERSION >= 500
+
 		nvidia,bpmp = <&bpmp 0>;
 		nvidia,aspm-cmrt-us = <60>;
 		nvidia,aspm-pwr-on-t-us = <20>;
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
-#endif
 	};
 
 	pcie_ep@14160000 {
 		compatible = "nvidia,tegra194-pcie-ep";
 		power-domains = <&bpmp TEGRA194_POWER_DOMAIN_PCIEX4A>;
-#if LINUX_VERSION >= 500
+
 		reg = <0x00 0x14160000 0x0 0x00020000   /* appl registers (128K)      */
+		       0x00 0x36000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x36040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
 		       0x00 0x36080000 0x0 0x00040000   /* DBI reg space (256K)       */
 		       0x14 0x00000000 0x4 0x00000000>; /* Address Space (16G)        */
-		reg-names = "appl", "atu_dma", "dbi", "addr_space";
-#else
-		reg = <0x00 0x14160000 0x0 0x00020000   /* appl registers (128K)      */
-		       0x00 0x36000000 0x0 0x02000000   /* window1 (32M)              */
-		       0x00 0x36000000 0x0 0x00040000   /* configuration space (256K) */
-		       0x00 0x36040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x14 0x00000000 0x4 0x00000000>; /* window2 (16G)              */
-		reg-names = "appl", "window1", "config", "atu_dma", "window2";
-#endif
+		reg-names = "appl", "config", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
 		#size-cells = <2>;
@@ -586,18 +564,12 @@
 		status = "disabled";
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_4>;
-#if LINUX_VERSION >= 500
 		clock-names = "core";
-#else
-		clock-names = "core_clk";
-#endif
+
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_4_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_4>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
+
 		interrupts = <0 51 0x04>;	/* controller interrupt */
 		interrupt-names = "intr";
 
@@ -628,40 +600,31 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE4>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE4 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE4R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE4W>;
 		interconnect-names = "dma-mem", "dma-mem";
 #endif
-#if LINUX_VERSION >= 500
+
 		nvidia,bpmp = <&bpmp 4>;
 		nvidia,aspm-cmrt-us = <60>;
 		nvidia,aspm-pwr-on-t-us = <20>;
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
-#endif
 	};
 
 	pcie_ep@141a0000 {
 		compatible = "nvidia,tegra194-pcie-ep";
 		power-domains = <&bpmp TEGRA194_POWER_DOMAIN_PCIEX8A>;
-#if LINUX_VERSION >= 500
+
 		reg = <0x00 0x141a0000 0x0 0x00020000   /* appl registers (128K)      */
+		       0x00 0x3a000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x3a040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
 		       0x00 0x3a080000 0x0 0x00040000   /* DBI reg space (256K)       */
 		       0x1c 0x00000000 0x4 0x00000000>; /* Address Space (16G)        */
-		reg-names = "appl", "atu_dma", "dbi", "addr_space";
-#else
-		reg = <0x00 0x141a0000 0x0 0x00020000   /* appl registers (128K)      */
-		       0x00 0x3a000000 0x0 0x02000000   /* window1 (32M)              */
-		       0x00 0x3a000000 0x0 0x00040000   /* configuration space (256K) */
-		       0x00 0x3a040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x1c 0x00000000 0x4 0x00000000>; /* window2 (16G)              */
-		reg-names = "appl", "window1", "config", "atu_dma", "window2";
-#endif
+		reg-names = "appl", "config", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
 		#size-cells = <2>;
@@ -669,18 +632,12 @@
 		status = "disabled";
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX1_CORE_5>;
-#if LINUX_VERSION >= 500
 		clock-names = "core";
-#else
-		clock-names = "core_clk";
-#endif
+
 		resets = <&bpmp_resets TEGRA194_RESET_PEX1_CORE_5_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX1_CORE_5>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
+
 		interrupts = <0 53 0x04>;	/* controller interrupt */
 		interrupt-names = "intr";
 
@@ -718,21 +675,19 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE5>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE5 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE5R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE5W>;
 		interconnect-names = "dma-mem", "dma-mem";
 #endif
-#if LINUX_VERSION >= 500
+
 		nvidia,bpmp = <&bpmp 5>;
 		nvidia,aspm-cmrt-us = <60>;
 		nvidia,aspm-pwr-on-t-us = <20>;
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
-#endif
 	};
 
 	pcie@14180000 {
@@ -756,19 +711,11 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_0>,
 			<&bpmp_clks TEGRA194_CLK_PEX0_CORE_0M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_0_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_0>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 72 0x04>,	/* controller interrupt */
 					 <0 73 0x04>;	/* MSI interrupt */
@@ -776,10 +723,9 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE0>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE0 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE0R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE0W>;
@@ -799,17 +745,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 0>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x0>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x38100000 0x0 0x38100000 0x0 0x00100000      /* downstream I/O (1MB) */
@@ -845,19 +790,11 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_1>,
 			<&bpmp_clks TEGRA194_CLK_PEX0_CORE_1M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_1_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_1>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 45 0x04>,	/* controller interrupt */
 					 <0 46 0x04>;	/* MSI interrupt */
@@ -865,10 +802,9 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE1>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE1 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE1R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE1W>;
@@ -890,17 +826,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 1>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x1>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x30100000 0x0 0x30100000 0x0 0x00100000      /* downstream I/O (1MB) */
@@ -937,19 +872,11 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_2>,
 			<&bpmp_clks TEGRA194_CLK_PEX0_CORE_2M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_2_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_2>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 47 0x04>,	/* controller interrupt */
 					 <0 48 0x04>;	/* MSI interrupt */
@@ -957,10 +884,9 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE2>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE2 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE2AR>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE2AW>;
@@ -981,17 +907,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 2>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x2>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x32100000 0x0 0x32100000 0x0 0x00100000      /* downstream I/O (1MB) */
@@ -1027,19 +952,11 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_3>,
 			<&bpmp_clks TEGRA194_CLK_PEX0_CORE_3M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_3_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_3>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 49 0x04>,	/* controller interrupt */
 					 <0 50 0x04>;	/* MSI interrupt */
@@ -1047,10 +964,9 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE3>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE3 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE3R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE3W>;
@@ -1071,17 +987,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 3>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x3>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x34100000 0x0 0x34100000 0x0 0x00100000      /* downstream I/O (1MB) */
@@ -1117,19 +1032,11 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX0_CORE_4>,
 			<&bpmp_clks TEGRA194_CLK_PEX0_CORE_4M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX0_CORE_4_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX0_CORE_4>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 51 0x04>,	/* controller interrupt */
 					 <0 52 0x04>;	/* MSI interrupt */
@@ -1137,10 +1044,9 @@
 
 		iommus = <&smmu TEGRA_SID_PCIE4>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE4 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE4R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE4W>;
@@ -1161,17 +1067,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 4>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x4>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x36100000 0x0 0x36100000 0x0 0x00100000      /* downstream I/O (1MB) */
@@ -1207,39 +1112,24 @@
 
 		clocks = <&bpmp_clks TEGRA194_CLK_PEX1_CORE_5>,
 			<&bpmp_clks TEGRA194_CLK_PEX1_CORE_5M>;
-#if LINUX_VERSION >= 500
 		clock-names = "core", "core_m";
-#else
-		clock-names = "core_clk", "core_clk_m";
-#endif
 
 		resets = <&bpmp_resets TEGRA194_RESET_PEX1_CORE_5_APB>,
 			 <&bpmp_resets TEGRA194_RESET_PEX1_CORE_5>;
-#if LINUX_VERSION >= 500
 		reset-names = "apb", "core";
-#else
-		reset-names = "core_apb_rst", "core_rst";
-#endif
 
 		interrupts = <0 53 0x04>,	/* controller interrupt */
 					 <0 54 0x04>;	/* MSI interrupt */
 		interrupt-names = "intr", "msi";
 
-#if LINUX_VERSION >= 500
 		pinctrl-names = "default";
 		pinctrl-0 = <&pex_rst_c5_out_state>, <&clkreq_c5_bi_dir_state>;
-#else
-		pinctrl-names = "pex_rst", "clkreq";
-		pinctrl-0 = <&pex_rst_c5_out_state>;
-		pinctrl-1 = <&clkreq_c5_bi_dir_state>;
-#endif
 
 		iommus = <&smmu TEGRA_SID_PCIE5>;
 		dma-coherent;
-#if LINUX_VERSION >= 414
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE5 0x1000>;
 		iommu-map-mask = <0x0>;
-#endif
+
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA194_MEMORY_CLIENT_PCIE5R>,
 				<&mc TEGRA194_MEMORY_CLIENT_PCIE5W>;
@@ -1261,17 +1151,16 @@
 		nvidia,disable-l1-cpm;
 		nvidia,aux-clk-freq = <0x13>;
 		nvidia,preset-init = <0x5>;
-#if LINUX_VERSION >= 500
+		/* Edit the following entries for Linux version K-5.10 or above */
 		nvidia,bpmp = <&bpmp 5>;
 		nvidia,aspm-cmrt-us = <0x3C>;
 		nvidia,aspm-pwr-on-t-us = <0x14>;
 		nvidia,aspm-l0s-entrance-latency-us = <0x3>;
-#else
+		/* Edit the following entries for linux version below K-5.10 */
 		nvidia,controller-id = <&bpmp 0x5>;
 		nvidia,aspm-cmrt = <0x3C>;
 		nvidia,aspm-pwr-on-t = <0x14>;
 		nvidia,aspm-l0s-entrance-latency = <0x3>;
-#endif
 
 		bus-range = <0x0 0xff>;
 		ranges = <0x81000000 0x0 0x3a100000 0x0 0x3a100000 0x0 0x00100000      /* downstream I/O (1MB) */
