--- a/kernel-dts/tegra194-soc/tegra194-soc-cvm.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-cvm.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2020, NVIDIA CORPORATION.  All rights reserved.
+ * Copyright (c) 2017-2021, NVIDIA CORPORATION.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms and conditions of the GNU General Public License,
@@ -76,9 +76,15 @@
 	reserved-memory {
 		vpr: vpr-carveout {
 			compatible = "nvidia,vpr-carveout";
+#if LINUX_VERSION >= 500
+			size = <0 0x40000000>;
+#else
 			size = <0 0x2a000000>;
+#endif
 			alignment = <0 0x400000>;
+#if LINUX_VERSION < 500
 			alloc-ranges = <0x0 0x80000000 0x0 0x70000000>;
+#endif
 			reusable;
 		};
 	};
