tegra: video: host: generalize capture support
* Remove soc name from capture support APIs
* Import of_match information for camera devices
  from soc specific project

Jira CO-2680

Change-Id: I082f8b88b813b8fc3882929a3444190e15d9666a
Signed-off-by: Mika Liljeberg <mliljeberg@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2503673
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Semi Malinen <smalinen@nvidia.com>
Reviewed-by: Pekka Pessi <ppessi@nvidia.com>
Reviewed-by: Ankit Gupta (SW-TEGRA) <ankitgu@nvidia.com>
Reviewed-by: Shubham Chandra <shubhamc@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/video/tegra/host/capture/Makefile
+++ b/drivers/video/tegra/host/capture/Makefile
@@ -8,3 +8,9 @@ ccflags-y += -Werror
 nvhost-capture-objs = capture-support.o
 
 obj-$(CONFIG_TEGRA_GRHOST) += nvhost-capture.o
+
+ifdef CONFIG_TEGRA_T23X_GRHOST
+
+ccflags-y += -I$(srctree.nvidia-t23x)/drivers/video/tegra/host
+
+endif
