arm64: tegra23x: define arch config for t239
Add CONFIG_ARCH_TEGRA_239_SOC. Marked n as default.

Bug 200705644

Change-Id: I2fdf183443af85336c462df63b7ffef6726e10cc
Signed-off-by: ajeshkv <akv@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-t23x/+/2503862
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -5,6 +5,13 @@ config ARCH_TEGRA_23x_SOC
 	help
 	  NVIDIA Tegra Downstream options for 23x family of SoCs
 
+config ARCH_TEGRA_239_SOC
+	bool "Tegra 239 family SOC (Downstream options)"
+	select PINCTRL
+	default n
+	help
+	  NVIDIA Tegra Downstream options for 239 family of SoCs
+
 config TEGRA_PSC
 	tristate "NVIDIA Tegra Option for PSC module"
 	depends on ARCH_TEGRA_23x_SOC
