--- a/arch/nvgpu-common.yaml
+++ b/arch/nvgpu-common.yaml
@@ -175,7 +175,8 @@ nvlink:
 nvgpu_err:
   safe: yes
   owner: Unknown
-  sources: [ include/nvgpu/nvgpu_err.h ]
+  sources: [ include/nvgpu/nvgpu_err.h,
+             include/nvgpu/nvgpu_err_info.h]
 
 pramin:
   safe: yes
