dts: t19x: Add sound-name-prefix to AHUB components
The sound-name-prefix is parsed by ASoC core and prefix is applied
for the component. For audio-graph based sound cards this DT property
is used to apply prefixes.

Bug 200692799

Change-Id: I833eb83b055924046cf1931c2c37b4ebe91d544b
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2521880
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
@@ -235,6 +235,7 @@
 				reg = <0x0 0x2902000 0x0 0x200>;
 				nvidia,ahub-sfc-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "SFC1";
 				status = "disabled";
 			};
 
@@ -243,6 +244,7 @@
 				reg = <0x0 0x2902200 0x0 0x200>;
 				nvidia,ahub-sfc-id = <1>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "SFC2";
 				status = "disabled";
 			};
 
@@ -251,6 +253,7 @@
 				reg = <0x0 0x2902400 0x0 0x200>;
 				nvidia,ahub-sfc-id = <2>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "SFC3";
 				status = "disabled";
 			};
 
@@ -259,6 +262,7 @@
 				reg = <0x0 0x2902600 0x0 0x200>;
 				nvidia,ahub-sfc-id = <3>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "SFC4";
 				status = "disabled";
 			};
 
@@ -295,6 +299,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S1";
 				status = "disabled";
 			};
 
@@ -316,6 +321,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S2";
 				status = "disabled";
 			};
 
@@ -337,6 +343,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S3";
 				status = "disabled";
 			};
 
@@ -358,6 +365,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S4";
 				status = "disabled";
 			};
 
@@ -379,6 +387,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S5";
 				status = "disabled";
 			};
 
@@ -400,6 +409,7 @@
 				assigned-clock-rates = <1536000>;
 				fsync-width = <31>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "I2S6";
 				status = "disabled";
 			};
 
@@ -408,6 +418,7 @@
 				reg = <0x0 0x2903000 0x0 0x100>;
 				nvidia,ahub-amx-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AMX1";
 				status = "disabled";
 			};
 
@@ -416,6 +427,7 @@
 				reg = <0x0 0x2903100 0x0 0x100>;
 				nvidia,ahub-amx-id = <1>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AMX2";
 				status = "disabled";
 			};
 
@@ -424,6 +436,7 @@
 				reg = <0x0 0x2903200 0x0 0x100>;
 				nvidia,ahub-amx-id = <2>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AMX3";
 				status = "disabled";
 			};
 
@@ -432,6 +445,7 @@
 				reg = <0x0 0x2903300 0x0 0x100>;
 				nvidia,ahub-amx-id = <3>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AMX4";
 				status = "disabled";
 			};
 
@@ -440,6 +454,7 @@
 				reg = <0x0 0x2903800 0x0 0x100>;
 				nvidia,ahub-adx-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "ADX1";
 				status = "disabled";
 			};
 
@@ -448,6 +463,7 @@
 				reg = <0x0 0x2903900 0x0 0x100>;
 				nvidia,ahub-adx-id = <1>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "ADX2";
 				status = "disabled";
 			};
 
@@ -456,6 +472,7 @@
 				reg = <0x0 0x2903a00 0x0 0x100>;
 				nvidia,ahub-adx-id = <2>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "ADX3";
 				status = "disabled";
 			};
 
@@ -464,6 +481,7 @@
 				reg = <0x0 0x2903b00 0x0 0x100>;
 				nvidia,ahub-adx-id = <3>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "ADX4";
 				status = "disabled";
 			};
 
@@ -480,6 +498,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <3072000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DMIC1";
 				status = "disabled";
 			};
 
@@ -496,6 +515,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <3072000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DMIC2";
 				status = "disabled";
 			};
 
@@ -513,6 +533,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <3072000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DMIC3";
 				status = "disabled";
 			};
 
@@ -529,6 +550,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <3072000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DMIC4";
 				status = "disabled";
 			};
 
@@ -537,6 +559,7 @@
 				reg = <0x0 0x2907000 0x0 0x100>;
 				nvidia,ahub-afc-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC1";
 				status = "disabled";
 			};
 
@@ -545,6 +568,7 @@
 				reg = <0x0 0x2907100 0x0 0x100>;
 				nvidia,ahub-afc-id = <1>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC2";
 				status = "disabled";
 			};
 
@@ -553,6 +577,7 @@
 				reg = <0x0 0x2907200 0x0 0x100>;
 				nvidia,ahub-afc-id = <2>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC3";
 				status = "disabled";
 			};
 
@@ -561,6 +586,7 @@
 				reg = <0x0 0x2907300 0x0 0x100>;
 				nvidia,ahub-afc-id = <3>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC4";
 				status = "disabled";
 			};
 
@@ -569,6 +595,7 @@
 				reg = <0x0 0x2907400 0x0 0x100>;
 				nvidia,ahub-afc-id = <4>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC5";
 				status = "disabled";
 			};
 
@@ -577,6 +604,7 @@
 				reg = <0x0 0x2907500 0x0 0x100>;
 				nvidia,ahub-afc-id = <5>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "AFC6";
 				status = "disabled";
 			};
 
@@ -585,6 +613,7 @@
 				reg = <0x0 0x290a000 0x0 0x200>;
 				nvidia,ahub-mvc-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "MVC1";
 				status = "disabled";
 			};
 
@@ -593,6 +622,7 @@
 				reg = <0x0 0x290a200 0x0 0x200>;
 				nvidia,ahub-mvc-id = <1>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "MVC2";
 				status = "disabled";
 			};
 
@@ -610,6 +640,7 @@
 				reg = <0x0 0x2910000 0x0 0x2000>;
 				nvidia,ahub-asrc-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "ASRC";
 				status = "disabled";
 			};
 
@@ -636,6 +667,7 @@
 				      <0x0 0x2908200 0x0 0x200>;
 				nvidia,ahub-ope-id = <0>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "OPE1";
 				status = "disabled";
 			};
 
@@ -653,6 +685,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <12288000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DSPK1";
 				status = "disabled";
 			};
 
@@ -671,6 +704,7 @@
 					<&bpmp_clks TEGRA194_CLK_PLLA_OUT0>;
 				assigned-clock-rates = <12288000>;
 				#sound-dai-cells = <1>;
+				sound-name-prefix = "DSPK2";
 				status = "disabled";
 			};
 		};
