dts: t19x: Add iommu properties for audio-graph sound card
Similar to legacy sound card, add iommu bindings to audio-graph sound
card. The 'iommu-resv-regions' property is required in downstream
alone due to dependency on ADSP. Hence retained the same for now.

Bug 200692799

Change-Id: I45a08283fd60890deb6e26afed2b7bf98e577ef9
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2521881
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-audio.dtsi
@@ -23,6 +23,13 @@
 		status = "disabled";
 	};
 
+	/* generic audio-graph based sound card */
+	sound_graph {
+		iommus = <&smmu TEGRA_SID_APE>;
+		iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
+		status = "disabled";
+	};
+
 	sound_ref {
 		iommus = <&smmu TEGRA_SID_APE>;
 		iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
