soc:eqos/mgbe: add macsec clks and rst
Adding eqos and mgbe macsec clocks and reset to dt

Bug 3266535

Change-Id: I1711509cf27b457f86153609caa9da09a5c2a841
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2506522
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Mahesh Patil <maheshp@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-by: Srinivas Ramachandran <srinivasra@nvidia.com>
Reviewed-by: Ashutosh Jha <ajha@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Mahesh Patil <maheshp@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -60,8 +60,9 @@
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
 		resets = <&bpmp_resets TEGRA234_RESET_MGBE0_MAC>,
-			 <&bpmp_resets TEGRA234_RESET_MGBE0_PCS>;
-		reset-names = "mac_rst", "xpcs_rst";
+			 <&bpmp_resets TEGRA234_RESET_MGBE0_PCS>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE0_MACSEC>; /* MACsec non-secure reset */
+		reset-names = "mac_rst", "xpcs_rst", "macsec_ns_rst";
 		clocks = <&bpmp_clks TEGRA234_CLK_MGBE0_RX_INPUT_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE0_RX_PCS_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE0_RX_PCS_INPUT>,
@@ -72,10 +73,11 @@
 			 <&bpmp_clks TEGRA234_CLK_MGBE0_MAC>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE0_EEE_PCS>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE0_APP>,
-			 <&bpmp_clks TEGRA234_CLK_MGBE0_PTP_REF>;
+			 <&bpmp_clks TEGRA234_CLK_MGBE0_PTP_REF>,
+			 <&bpmp_clks TEGRA234_CLK_MGBE0_MACSEC>;
 		clock-names = "rx_input_m", "rx_pcs_m", "rx_pcs_input",
 			      "rx_pcs", "tx", "tx_pcs", "mac_divider",
-			      "mac", "eee_pcs", "app", "ptp_ref";
+			      "mac", "eee_pcs", "app", "ptp_ref", "mgbe_macsec";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -113,8 +115,9 @@
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
 		resets = <&bpmp_resets TEGRA234_RESET_MGBE1_MAC>,
-			 <&bpmp_resets TEGRA234_RESET_MGBE1_PCS>;
-		reset-names = "mac_rst", "xpcs_rst";
+			 <&bpmp_resets TEGRA234_RESET_MGBE1_PCS>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE1_MACSEC>; /* MACsec non-secure reset */
+		reset-names = "mac_rst", "xpcs_rst", "macsec_ns_rst";
 		clocks = <&bpmp_clks TEGRA234_CLK_MGBE1_RX_INPUT_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE1_RX_PCS_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE1_RX_PCS_INPUT>,
@@ -125,10 +128,11 @@
 			 <&bpmp_clks TEGRA234_CLK_MGBE1_MAC>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE1_EEE_PCS>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE1_APP>,
-			 <&bpmp_clks TEGRA234_CLK_MGBE1_PTP_REF>;
+			 <&bpmp_clks TEGRA234_CLK_MGBE1_PTP_REF>,
+			 <&bpmp_clks TEGRA234_CLK_MGBE1_MACSEC>;
 		clock-names = "rx_input_m", "rx_pcs_m", "rx_pcs_input",
 			      "rx_pcs", "tx", "tx_pcs", "mac_divider",
-			      "mac", "eee_pcs", "app", "ptp_ref";
+			      "mac", "eee_pcs", "app", "ptp_ref", "mgbe_macsec";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -165,8 +169,9 @@
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
 		resets = <&bpmp_resets TEGRA234_RESET_MGBE2_MAC>,
-			 <&bpmp_resets TEGRA234_RESET_MGBE2_PCS>;
-		reset-names = "mac_rst", "xpcs_rst";
+			 <&bpmp_resets TEGRA234_RESET_MGBE2_PCS>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE2_MACSEC>; /* MACsec non-secure reset */
+		reset-names = "mac_rst", "xpcs_rst", "macsec_ns_rst";
 		clocks = <&bpmp_clks TEGRA234_CLK_MGBE2_RX_INPUT_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE2_RX_PCS_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE2_RX_PCS_INPUT>,
@@ -177,10 +182,11 @@
 			 <&bpmp_clks TEGRA234_CLK_MGBE2_MAC>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE2_EEE_PCS>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE2_APP>,
-			 <&bpmp_clks TEGRA234_CLK_MGBE2_PTP_REF>;
+			 <&bpmp_clks TEGRA234_CLK_MGBE2_PTP_REF>,
+			 <&bpmp_clks TEGRA234_CLK_MGBE2_MACSEC>;
 		clock-names = "rx_input_m", "rx_pcs_m", "rx_pcs_input",
 			      "rx_pcs", "tx", "tx_pcs", "mac_divider",
-			      "mac", "eee_pcs", "app", "ptp_ref";
+			      "mac", "eee_pcs", "app", "ptp_ref", "mgbe_macsec";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -217,8 +223,9 @@
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
 		resets = <&bpmp_resets TEGRA234_RESET_MGBE3_MAC>,
-			 <&bpmp_resets TEGRA234_RESET_MGBE3_PCS>;
-		reset-names = "mac_rst", "xpcs_rst";
+			 <&bpmp_resets TEGRA234_RESET_MGBE3_PCS>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE3_MACSEC>; /* MACsec non-secure reset */
+		reset-names = "mac_rst", "xpcs_rst", "macsec_ns_rst";
 		clocks = <&bpmp_clks TEGRA234_CLK_MGBE3_RX_INPUT_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE3_RX_PCS_M>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE3_RX_PCS_INPUT>,
@@ -229,10 +236,11 @@
 			 <&bpmp_clks TEGRA234_CLK_MGBE3_MAC>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE3_EEE_PCS>,
 			 <&bpmp_clks TEGRA234_CLK_MGBE3_APP>,
-			 <&bpmp_clks TEGRA234_CLK_MGBE3_PTP_REF>;
+			 <&bpmp_clks TEGRA234_CLK_MGBE3_PTP_REF>,
+			 <&bpmp_clks TEGRA234_CLK_MGBE3_MACSEC>;
 		clock-names = "rx_input_m", "rx_pcs_m", "rx_pcs_input",
 			      "rx_pcs", "tx", "tx_pcs", "mac_divider",
-			      "mac", "eee_pcs", "app", "ptp_ref";
+			      "mac", "eee_pcs", "app", "ptp_ref", "mgbe_macsec";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
