--- a/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
@@ -41,15 +41,21 @@
 
 	ethernet@2310000 {
 		compatible = "nvidia,nveqos";
-		reg = <0x0 0x02310000 0x0 0x10000>;    /* EQOS Base Register */
-		reg-names = "mac-base";
+		reg = <0x0 0x02310000 0x0 0x10000>,    /* EQOS Base Register */
+		      <0x0 0x023C0000 0x0 0x10000>;    /* MACSEC Base Register */
+		reg-names = "mac-base", "macsec-base";
 		interrupts = <0 194 0x4>,       /* common */
 			     <0 186 0x4>, /* vm0 */
 			     <0 187 0x4>, /* vm1 */
 			     <0 188 0x4>, /* vm2 */
-			     <0 189 0x4>; /* vm3 */
-		resets = <&bpmp_resets TEGRA234_RESET_EQOS>;
-		reset-names = "mac_rst";
+			     <0 189 0x4>, /* vm3 */
+			     <0 190 0x4>, /* MACsec non-secure intr */
+			     <0 191 0x4>; /* MACsec secure intr */
+		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3",
+				  "macsec-ns-irq", "macsec-s-irq";
+		resets = <&bpmp_resets TEGRA234_RESET_EQOS>,
+			 <&bpmp_resets TEGRA234_RESET_EQOS_MACSEC>; /* MACsec non-secure reset */
+		reset-names = "mac_rst", "macsec_ns_rst";
 		clocks = <&bpmp_clks TEGRA234_CLK_PLLREFE_VCOOUT>,
 			 <&bpmp_clks TEGRA234_CLK_EQOS_AXI>,
 			 <&bpmp_clks TEGRA234_CLK_EQOS_RX>,
@@ -57,10 +63,13 @@
 			 <&bpmp_clks TEGRA234_CLK_EQOS_TX>,
 			 <&bpmp_clks TEGRA234_CLK_AXI_CBB>,
 			 <&bpmp_clks TEGRA234_CLK_EQOS_RX_M>,
-			 <&bpmp_clks TEGRA234_CLK_EQOS_RX_INPUT>;
+			 <&bpmp_clks TEGRA234_CLK_EQOS_RX_INPUT>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_MACSEC_TX>,
+			 <&bpmp_clks TEGRA234_CLK_EQOS_MACSEC_RX>;
 		clock-names = "pllrefe_vcoout", "eqos_axi", "eqos_rx",
 			      "eqos_ptp_ref", "eqos_tx", "axi_cbb",
-			      "eqos_rx_m", "eqos_rx_input";
+			      "eqos_rx_m", "eqos_rx_input",
+			       "eqos_macsec_tx", "eqos_macsec_rx";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso1 TEGRA_SID_NISO1_EQOS>;
 #else
