gpu: nvgpu: vgpu: added VAB support for HV
Added below IVC commands to support VAB on HV.

 * TEGRA_VGPU_CMD_FB_VAB_RESERVE - Enable & Configure VAB tracking
 * TEGRA_VGPU_CMD_FB_VAB_FLUSH_STATE - Dump VAB to user buffer
 * TEGRA_VGPU_CMD_FB_VAB_RELEASE - Disable VAB tracking

Also set HAL and enable VAB for ga10b vgpu.

Jira GVSCI-4619

Change-Id: Id7564611c24740ab8613e4baa420ee58fb52759a
Signed-off-by: Sagar Kadamati <skadamati@nvidia.com>
Signed-off-by: Richard Zhao <rizhao@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvgpu/+/2507268
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/arch/nvgpu-vgpu.yaml
+++ b/arch/nvgpu-vgpu.yaml
@@ -59,6 +59,8 @@ all:
              common/vgpu/fbp/fbp_vgpu.h,
              common/vgpu/fb/fb_vgpu.c,
              common/vgpu/fb/fb_vgpu.h,
+             common/vgpu/fb/vab_vgpu.c,
+             common/vgpu/fb/vab_vgpu.h,
              common/vgpu/intr/intr_vgpu.c,
              common/vgpu/intr/intr_vgpu.h,
              common/vgpu/ivc/comm_vgpu.c,
