--- a/drivers/gpu/nvgpu/Makefile.sources
+++ b/drivers/gpu/nvgpu/Makefile.sources
@@ -585,6 +585,7 @@ srcs += common/vgpu/init/init_vgpu.c \
 	common/vgpu/mm/vm_vgpu.c \
 	common/vgpu/gr/gr_vgpu.c \
 	common/vgpu/fb/fb_vgpu.c \
+	common/vgpu/fb/vab_vgpu.c \
 	common/vgpu/gr/ctx_vgpu.c \
 	common/vgpu/gr/subctx_vgpu.c \
 	common/vgpu/clk_vgpu.c \
