pinctrl: tegra: Add T234 pinmux driver
JIRA OKERNELIO-15

Change-Id: I0d43f5c049f23b831fb7f5a5cfc097db684e4c95
Signed-off-by: Prathamesh Shete <pshete@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-t23x/+/2507850
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -6,4 +6,11 @@ config PINCTRL_TEGRA234_DPAUX
         select PINCONF
         select PINMUX
 
+config PINCTRL_TEGRA234
+	bool "NVIDIA Tegra234 Pinmux support"
+	select PINCTRL_TEGRA
+	default y if ARCH_TEGRA_23x_SOC
+	help
+	Support for the NVIDIA Tegra234 PINCTRL controller driver.
+
 endmenu
