--- a/osi/core/Makefile.sdk
+++ b/osi/core/Makefile.sdk
@@ -10,7 +10,7 @@ include $(PDK_TOP)/drive-t186ref-qnx/make/nvdefs.mk
 
 TARGETS = libnvethernetrm.so
 
-CFLAGS += -g -Wall $(NV_PLATFORM_OPT) $(NV_PLATFORM_CFLAGS) -DOSI_STRIPPED_LIB
+CFLAGS += -g -Wall $(NV_PLATFORM_OPT) $(NV_PLATFORM_CFLAGS)
 CPPFLAGS = $(NV_PLATFORM_SDK_INC) $(NV_PLATFORM_CPPFLAGS)  -I../../../include -I../dma -I../common/include
 CPPFLAGS += -DNV_IS_SAFETY=$(NV_PLATFORM_SAFETY)
 LDFLAGS  := \
@@ -21,9 +21,15 @@ LDFLAGS += -shared
 OBJS := eqos_core.o
 OBJS += eqos_mmc.o
 OBJS += osi_core.o
+OBJS += vlan_filter.o
+OBJS += frp.o
+OBJS += mgbe_core.o
+OBJS += xpcs.o
+OBJS += mgbe_mmc.o
 OBJS += ivc_core.o
 OBJS += ./../common/osi_common.o
 OBJS += ./../common/eqos_common.o
+OBJS += ./../common/mgbe_common.o
 
 CFLAGS += -D_FILE_OFFSET_BITS=64
 
