--- a/osi/dma/Makefile.sdk
+++ b/osi/dma/Makefile.sdk
@@ -10,7 +10,7 @@ include $(PDK_TOP)/drive-t186ref-qnx/make/nvdefs.mk
 
 TARGETS = libnvethernetcl.so
 
-CFLAGS += -g -Wall $(NV_PLATFORM_OPT) $(NV_PLATFORM_CFLAGS) -DOSI_STRIPPED_LIB
+CFLAGS += -g -Wall $(NV_PLATFORM_OPT) $(NV_PLATFORM_CFLAGS)
 CPPFLAGS = $(NV_PLATFORM_SDK_INC) $(NV_PLATFORM_CPPFLAGS)  -I../../../include -I../core -I../common/include
 CPPFLAGS += -DNV_IS_SAFETY=$(NV_PLATFORM_SAFETY)
 LDFLAGS  := \
@@ -21,8 +21,12 @@ LDFLAGS += -shared
 OBJS := eqos_dma.o
 OBJS += osi_dma.o
 OBJS += osi_dma_txrx.o
+OBJS += mgbe_dma.o
+OBJS += eqos_desc.o
+OBJS += mgbe_desc.o
 OBJS += ./../common/osi_common.o
 OBJS += ./../common/eqos_common.o
+OBJS += ./../common/mgbe_common.o
 
 CFLAGS += -D_FILE_OFFSET_BITS=64
 
