--- a/osi/dma/Makefile.tmk
+++ b/osi/dma/Makefile.tmk
@@ -26,7 +26,6 @@ ifdef NV_COMPONENT_FLAG_SHARED_LIBRARY_SECTION
 include $(NV_BUILD_START_COMPONENT)
 
 NV_COMPONENT_STRICT_WARNINGS_qnx_64 := 1
-NV_COMPONENT_CFLAGS            := -DOSI_STRIPPED_LIB
 
 NV_COMPONENT_NAME              := nvethernetcl
 NV_COMPONENT_OWN_INTERFACE_DIR := .
@@ -34,8 +33,12 @@ NV_COMPONENT_SOURCES           := \
 	eqos_dma.c \
 	osi_dma.c \
 	osi_dma_txrx.c \
+	mgbe_dma.c \
+	eqos_desc.c \
+	mgbe_desc.c \
 	$(NV_SOURCE)/nvethernetrm/osi/common/osi_common.c \
-	$(NV_SOURCE)/nvethernetrm/osi/common/eqos_common.c
+	$(NV_SOURCE)/nvethernetrm/osi/common/eqos_common.c \
+	$(NV_SOURCE)/nvethernetrm/osi/common/mgbe_common.c
 
 NV_COMPONENT_INCLUDES          := \
 	$(NV_SOURCE)/nvethernetrm/include \
